--- a/scan-front/package.json
+++ b/scan-front/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "axios": "^1.13.1",
     "chess.js": "^1.4.0",
     "expo": "~54.0.20",
     "expo-camera": "~17.0.8",
@@ -23,6 +24,7 @@
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
+    "expo-image-manipulator": "^14.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
     "expo-splash-screen": "~31.0.10",
