added model and updated edit board

--- a/scan-front/.env
+++ b/scan-front/.env
@@ -2,17 +2,23 @@
 # For Expo, variables must be prefixed with EXPO_PUBLIC_ to be accessible in the app
 
 # Backend API URLs
-# Using your computer's local IP address: 192.168.0.107
+# Chess Detector Backend (FastAPI with YOLO models)
+# Default port: 8000 (FastAPI uvicorn default)
+# Using your computer's local IP address: 192.168.1.7
 # Make sure your phone is on the same Wi-Fi network!
 
-EXPO_PUBLIC_VISION_API_URL=http://192.168.0.107:3000/api/vision
-EXPO_PUBLIC_CHESS_ENGINE_URL=http://192.168.0.107:3000/api/engine
+EXPO_PUBLIC_VISION_API_URL=http://192.168.1.7:8000
+EXPO_PUBLIC_CHESS_ENGINE_URL=http://192.168.1.7:8000
 
 # Alternative configurations (uncomment if needed):
 # For Android Emulator:
-# EXPO_PUBLIC_VISION_API_URL=http://10.0.2.2:3000/api/vision
-# EXPO_PUBLIC_CHESS_ENGINE_URL=http://10.0.2.2:3000/api/engine
+# EXPO_PUBLIC_VISION_API_URL=http://10.0.2.2:8000
+# EXPO_PUBLIC_CHESS_ENGINE_URL=http://10.0.2.2:8000
 
 # For iOS Simulator:
-# EXPO_PUBLIC_VISION_API_URL=http://localhost:3000/api/vision
-# EXPO_PUBLIC_CHESS_ENGINE_URL=http://localhost:3000/api/engine
+# EXPO_PUBLIC_VISION_API_URL=http://localhost:8000
+# EXPO_PUBLIC_CHESS_ENGINE_URL=http://localhost:8000
+
+# For testing with localhost (if running on same machine):
+# EXPO_PUBLIC_VISION_API_URL=http://localhost:8000
+# EXPO_PUBLIC_CHESS_ENGINE_URL=http://localhost:8000
