--- a/scan-front/.env
+++ b/scan-front/.env
@@ -10,6 +10,10 @@
 EXPO_PUBLIC_VISION_API_URL=http://192.168.1.7:8000
 EXPO_PUBLIC_CHESS_ENGINE_URL=http://192.168.1.7:8000
 
+
+# EXPO_PUBLIC_VISION_API_URL=http://93.127.199.118:8090
+# EXPO_PUBLIC_CHESS_ENGINE_URL=http://93.127.199.118:8090
+
 # Alternative configurations (uncomment if needed):
 # For Android Emulator:
 # EXPO_PUBLIC_VISION_API_URL=http://10.0.2.2:8000
