added 12 and 18 depth

--- a/scan-front/.env
+++ b/scan-front/.env
@@ -7,12 +7,17 @@
 # Using your computer's local IP address: 192.168.1.7
 # Make sure your phone is on the same Wi-Fi network!
 
-EXPO_PUBLIC_VISION_API_URL=http://192.168.1.7:8000
-EXPO_PUBLIC_CHESS_ENGINE_URL=http://192.168.1.7:8000
+# EXPO_PUBLIC_VISION_API_URL=http://192.168.1.7:8000
+# EXPO_PUBLIC_CHESS_ENGINE_URL=http://192.168.1.7:8000
 
 
-# EXPO_PUBLIC_VISION_API_URL=http://93.127.199.118:8090
-# EXPO_PUBLIC_CHESS_ENGINE_URL=http://93.127.199.118:8090
+EXPO_PUBLIC_VISION_API_URL=http://93.127.199.118:8090
+EXPO_PUBLIC_CHESS_ENGINE_URL=http://93.127.199.118:8090
+
+
+# EXPO_PUBLIC_VISION_API_URL=https://chessscanner.seedrlite.in
+# EXPO_PUBLIC_CHESS_ENGINE_URL=https://chessscanner.seedrlite.in
+
 
 # Alternative configurations (uncomment if needed):
 # For Android Emulator:
