--- a/scan-front/package.json
+++ b/scan-front/package.json
@@ -20,7 +20,9 @@
     "chess.js": "^1.4.0",
     "expo": "~54.0.25",
     "expo-camera": "~17.0.9",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.18",
     "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
